<resources>
    <string name="app_name">Starfang</string>
    <string name="bot_name_default">고냐옹</string>
    <string name="tab_text_1">장수</string>
    <string name="tab_text_2">대화</string>
    <string name="tab_text_3">냥봇</string>
    <string name="tab_text_4">보물</string>
    <string name="tab_text_5">보패</string>
    <string name="column_name">이름</string>
    <string name="column_level">level</string>
    <string name="column_branch">병종</string>
    <string-array name="column_list_fix">
        <item>@string/column_branch</item>
        <item>@string/column_name</item>
    </string-array>
    <string name="column_force">무력</string>
    <string name="column_intelligence">지력</string>
    <string name="column_command">통솔</string>
    <string name="column_agility">민첩</string>
    <string name="column_luck">행운</string>
    <string name="column_weapon">무기</string>
    <string name="column_armor">방어구</string>
    <string name="column_aid">보조구</string>
    <string name="column_cost">COST</string>
    <string name="column_linage">계보</string>
    <string name="column_personality">성격</string>
    <string-array name="column_list_float">
        <item>@string/column_cost</item>
        <item>@string/column_linage</item>
       
        <item>@string/column_personality</item>
    </string-array>
    <string-array name="pref_list_table">
        <item>장수 정보</item>
        <item>병종 정보</item>
        <item>병종 상성</item>
        <item>지형 정보</item>
        <item>설명</item>
        <item>인연</item>
        <item>보물</item>
        <item>보물 분류</item>
        <item>보물 강화</item>
        <item>일반 보물</item>
        <item>보패 접두사</item>
        <item>보패 접미사</item>
        <item>보패 조합</item>
        <item>도트</item>
        <item>책략</item>
        
        <item>일정</item>
    </string-array>
    <string-array name="option_sort_heroes">
        <item>@string/name_kor</item>
        <item>@string/branch_kor</item>
        <item>@string/cost</item>
        <item>@string/lineage_kor</item>
        <item>@string/personality_kor</item>
        <item>@string/level_kor</item>
        <item>@string/stat_kor</item>
        <item>@string/power_kor</item>
        <item>@string/spec_score</item>
    </string-array>
    <string-array name="option_sort_stat">
        <item>@string/sum_kor</item>
        <item>@string/stat1</item>
        <item>@string/stat2</item>
        <item>@string/stat3</item>
        <item>@string/stat4</item>
        <item>@string/stat5</item>
    </string-array>
    <string-array name="option_sort_cost">
        <item>현재</item>
        <item>최종</item>
    </string-array>
    <string-array name="option_sort_power">
        <item>@string/sum_kor</item>
        <item>@string/power1</item>
        <item>@string/power2</item>
        <item>@string/power3</item>
        <item>@string/power4</item>
        <item>@string/power5</item>
    </string-array>
    <string-array name="guardians">
        <item>@string/guardian_blue_dragon</item>
        <item>@string/guardian_red_bird</item>
        <item>@string/guardian_white_tiger</item>
        <item>@string/guardian_black_tortoise</item>
    </string-array>
    <string-array name="relic_grade_super_scripts">
        <item>@string/super_script_one</item>
        <item>@string/super_script_two</item>
        <item>@string/super_script_three</item>
        <item>@string/super_script_four</item>
    </string-array>
    <string name="notifications">Notifications</string>
    <string name="start_bot">냥봇 시작</string>
    <string name="notifications_setting">권한 설정</string>
    <string name="insert_name_kor">이름 입력</string>
    <string name="final_cost_kor">최종COST</string>
    <string name="lineage_kor">계보</string>
    <string name="progress_condition">상태</string>
    <string name="progress_db">DB</string>
    <string name="progress_message">메세지</string>
    <string name="host_address_2">http://192.168.25.4</string>
    <string name="host_address_1">http://clavis.ivyro.net</string>
    <string name="sync_kor">동기화</string>
    <string name="sync_host">SYNC HOST</string>
    <string name="filter_kor">필터</string>
    <string name="filter_send_cat">작성자 필터</string>
    <string name="filter_room">단톡방 필터</string>
    <string name="filter_time">기간 필터</string>
    <string name="filter_conversation">단어 필터</string>
    <string name="submit">SUBMIT</string>
    <string name="search">SEARCH</string>
    <string name="desc_filter_sendCat">작성자 필터: 필터링할 작성자를 선택하세요.</string>
    <string name="filter_summary">필터 요약</string>
    <string name="desc_no_filter">필터 설정 안됨…</string>
    <string name="sendcat_count_holder">명 선택 됨 :</string>
    <string name="filter">FILTER</string>
    <string name="room_count_holder">개 선택 됨</string>
    <string name="desc_filter_room">단톡방 필터: 필터링할 단톡방을 선택하세요.</string>
    <string name="desc_filter_conversation">단어 필터: 쉼표(,)를 이용하여 여러개 입력 가능합니다.</string>
    <string name="desc_filter">버튼을 길게 누르면 필터 설정, 짧게 누르면 필터 ON/OFF</string>
    <string name="search_kor">검색</string>
    <string name="conversation_holder">입력된 단어:</string>
    <string name="desc_insert_name">단톡방에서 다른봇과 구별되는 이름을 입력하세요.(2~4글자)\n\n [봇이름]시작냥, [봇이름]정지냥 명령어로 제어가능.</string>
    <string name="sum_kor">합계</string>
    <string name="stat1">무력</string>
    <string name="stat2">지력</string>
    <string name="stat3">통솔</string>
    <string name="stat4">민첩</string>
    <string name="stat5">행운</string>
    <string name="power1">공격력</string>
    <string name="power2">정신력</string>
    <string name="power3">방어력</string>
    <string name="power4">순발력</string>
    <string name="power5">사기</string>
    <string name="unique_spec">고유 효과</string>
    <string name="branch_spec">병종 효과</string>
    <string name="spec6">군주</string>
    <string name="spec5">태수</string>
    <string name="spec4">Lv90</string>
    <string name="spec3">Lv70</string>
    <string name="spec2">Lv50</string>
    <string name="spec1">Lv30</string>
    <string name="branch_spec5">Lv25</string>
    <string name="branch_spec4">Lv20</string>
    <string name="branch_spec3">Lv15</string>
    <string name="branch_spec2">Lv10</string>
    <string name="branch_spec1">Lv01</string>
    <string name="plus_stat_sum">교본 합</string>
    <string name="grade_no_reinforce">연의</string>
    <string name="weapon">무기</string>
    <string name="shield">방어구</string>
    <string name="aid">보조구</string>
    <string name="spec_score">효과 점수</string>
    <string name="spec_kor">효과</string>
    <string name="grade_one">★1</string>
    <string name="grade_two">★2</string>
    <string name="grade_three">★3</string>
    <string name="grade_four">★4</string>
    <string name="grade_five">★5</string>
    <string name="branch_grade_kor">승급</string>
    <string name="step_kor">단계</string>
    <string name="level_kor">레벨</string>
    <string name="name_kor">이름</string>
    <string name="branch_kor">병종</string>
    <string name="personality_kor">성격</string>
    <string name="cost">COST</string>
    <string name="stat_kor">스탯</string>
    <string name="item_kor">보물</string>
    <string name="level">Lv.</string>
    <string name="plus">+</string>
    <string name="star_filled">★</string>
    <string name="slash">/</string>
    <string name="passive_spec_kor">패시브 효과</string>
    <string name="power_kor">전투력</string>
    <string name="hero_spec_kor">장수 효과</string>
    <string name="description">
        "냥봇 19.11.22 설명 \n"

        "*폰트: 나눔바른고딕™ 최적화\n"
        "*소스코드: github.com/star-fang/Starfang\n\n"

        "[검색 할 단어] + [명령어] + [냥] 으로 실행.\n"
        "[설명][책략][조합] 등의 [명령어]를 입력하지 않으면\n"
        "장수->특성->보물->책략->설명 순으로 검색하여\n"
        "해당 단어가 발견되면 검색을 중단함.\n\n"

        "01.장수정보: [장수이름] + '냥'\n"
		"02.장수목록: [조건] + '냥'\n"
            "    조건1) 효과\n"
	    	"    조건2) 병종\n"
			"    조건3) 코스트\n"
            "      [숫자] + [~]\n"
			"    조건4) 계보 4자리\n"
        "03. 설명: [효과]or[병종]or[보물] + '냥 냥'\n"
		"04. 책략정보: [책략] + '책략 냥'\n"
		"05. 보패조합: [접미사]or[조합효과] + '조합 냥'\n"
		"06. 보패정보: [접두사]or[접미사] + '보패 냥'\n"
		"07. 지형상성: [병종] + [지형] + '지형 냥'\n"
		"08. 병종상성: [병종] + [병종] + '상성 냥'\n"
        "09. 이동력소모: [병종] + [지형] + '소모 냥'\n"
        "10. 보물검색: [보물이름]or[효과] + '보물 냥'\n"
        "11. 일정: [날짜4자리]or[맵] + '섬멸'or'경쟁' + '일정 냥'\n"
        "12. 인연: [인연]or[장수] + '인연 냥'\n"
        "13. 약탈시간계산: [광] + [수량] + '약탈(보조) 멍'\n"
        "14. 약탈자정보: [시:분] + [광] + '약탈당함 멍'\n"
        "15. 수식계산: [수식] + '계산 냥' \n\n" </string>
    <string name="desc_too_many_combs">
        "개 조합: 특성조합 수가 너무 많다냥..특성이름을 자세하게 입력해보라냥\n"
        "eg. 공격냥(X) 주동공격(O)"
    </string>
    <string name="equals">=</string>
    <string name="branch_grade_suffix_kor">계</string>
    <string name="create_item_kor">보물 생성</string>
    <string name="modify_kor">변경</string>
    <string name="create_kor">생성</string>
    <string name="cancel_kor">취소</string>
    <string name="cancel_transaction_kor">실행 취소</string>
    <string name="transaction_canceled_kor">실행 취소됨</string>
    <string name="transaction_cancel_failure_kor">실행 취소 실패</string>
    <string name="modified_kor">변경됨</string>
    <string name="added_kor">추가됨</string>
    <string name="add_kor">추가</string>
    <string name="setting_kor">설정</string>
    <string name="setting">SETTING</string>
    <string name="chat">CHAT</string>
    <string name="sort_kor">정렬</string>
    <string name="spec_reinforce_level6">LV 6 강화 효과</string>
    <string name="spec_reinforce_level12">LV 12 강화 효과</string>
    <string name="hero_who_has_item">착용 장수</string>
    <string name="reinforcement_kor">강화</string>
    <string name="description_kor">설명</string>
    <string name="grade_kor">등급</string>
    <string name="all_pick_kor">전체</string>
    <string name="category_item_man">대분류</string>
    <string name="category_item_sub">소분류</string>
    <string name="growth_rate_kor">성장률</string>
    <string name="plus_stat_book_kor">교본</string>
    <string name="release_kor">해제</string>
    <string name="wear_kor">착용</string>
    <string name="item_wear_or_release_kor">보물 착용/해제</string>
    <string name="available_item_list_kor">착용가능 보물 목록</string>
    <string name="picked_kor">선택된</string>
    <string name="colon">:</string>
    <string name="slot_kor">슬롯</string>
    <string name="relic_slot_kor">보패 슬롯</string>
    <string name="relic_kor">보패</string>
    <string name="available_relic_list_kor">착용가능 보패 목록</string>
    <string name="desc_relic_level_init">: 보패 레벨 초기화</string>
    <string name="desc_relic_level_up">: 보패 레벨</string>
    <string name="guardian_blue_dragon">청룡</string>
    <string name="guardian_red_bird">주작</string>
    <string name="guardian_white_tiger">백호</string>
    <string name="guardian_black_tortoise">현무</string>
    <string name="super_script_one">&#185;</string>
    <string name="super_script_two">&#178;</string>
    <string name="super_script_three">&#179;</string>
    <string name="super_script_four">&#8308;</string>
    <string name="count_holder">개</string>
    <string name="selected_kor">선택된</string>
    <string name="blend_kor">합성</string>
    <string name="wear_off_kor">착용해제</string>
    <string name="delete_kor">삭제</string>
    <string name="complete_kor">완료</string>
    <string name="hint_spreadsheet_id">Spreadsheet ID</string>
    <string name="spreadsheets_kor">스프레드시트</string>
    <string name="check_realm_instances">check realm instances</string>
    <string name="ep">!</string>
    <string name="start_record">녹화 시작</string>
</resources>