<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303E55D6"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp">

            <Switch
                android:id="@+id/record_start"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:defaultValue="false"/>

            <TextView
                android:layout_below="@id/record_start"
                android:id="@+id/text_record_start"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:text="@string/start_record"
                android:textAlignment="center"/>
        </RelativeLayout>
        <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="15dp"
        >

        <Switch
            android:id="@+id/notifications_start"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:defaultValue="false"/>

        <TextView
            android:layout_below="@id/notifications_start"
            android:id="@+id/text_notification_start"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:text="@string/start_bot"
            android:textAlignment="center"/>
    </RelativeLayout>
        <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/notifications_setting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_notifications_black_24dp"
            android:backgroundTint="@color/ic_launcher_background"
            android:padding="10dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_below="@id/notifications_setting"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/notifications_setting" />
    </RelativeLayout>
        <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        >

        <Button
            android:id="@+id/start_sync_key_all"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_sync_black_24dp"
            android:backgroundTint="@color/ic_launcher_background"
            android:padding="10dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_below="@id/start_sync_key_all"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/sync_kor" />
    </RelativeLayout>

    </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/row_et_name"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:maxLength="4"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/button_insert_name"
            android:id="@+id/text_name"
            android:layout_width="140dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp"
            android:maxLines="1"
            android:padding="10dp"
            android:hint="@string/insert_name_kor"
            android:inputType="text"
            android:importantForAutofill="no" />
        <Button
            android:id="@+id/button_insert_name"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/rect_button"
            android:text="@string/submit"/>

        <TextView
            android:background="#30000000"
            android:layout_marginStart="5dp"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:text="@string/desc_insert_name"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/button_insert_name"
            android:textSize="13sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row_et_test"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true">
        <EditText
            android:id="@+id/text_address"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:layout_centerVertical="true"
            android:icon="@drawable/ic_info_white_24dp"
            android:padding="10dp"
            android:text="@string/host_address_1"
            android:visibility="gone"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </RelativeLayout>
</RelativeLayout>