<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@color/design_default_color_primary_dark"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:context="com.fang.starfang.MainActivity">

    <Button
        android:id="@+id/button_close_progress_dialog"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_above="@id/scroll_progress_list"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@android:drawable/ic_delete" />

    <LinearLayout
        android:layout_above="@id/scroll_progress_list"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/progress_condition"
            android:textAlignment="center" />

        <TextView
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/progress_db"
            android:textAlignment="center" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:minWidth="100dp"
            android:text="@string/progress_message"
            android:textAlignment="center" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scroll_progress_list"
        android:layout_above="@id/progress_result"
        android:layout_centerHorizontal="true"
        android:layout_width="350dp"
        android:layout_height="215dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/progress_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_alignParentBottom="true"
        android:id="@+id/progress_result"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />


</RelativeLayout>

